--- a/SmartGel/storyboard/Main_iPhone.storyboard
+++ b/SmartGel/storyboard/Main_iPhone.storyboard
@@ -698,14 +698,14 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="akx-8w-Mew">
-                                <rect key="frame" x="20" y="60" width="295" height="523"/>
+                                <rect key="frame" x="10" y="60" width="305" height="523"/>
                                 <subviews>
                                     <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ldj-W9-LFg">
-                                        <rect key="frame" x="0.0" y="0.0" width="295" height="523"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="305" height="523"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </imageView>
                                     <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Wcc-yP-fJe">
-                                        <rect key="frame" x="0.0" y="0.0" width="295" height="523"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="305" height="523"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
@@ -752,7 +752,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.1960784314" green="0.2274509804" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="akx-8w-Mew" firstAttribute="leading" secondItem="xEH-nL-HuH" secondAttribute="leading" constant="20" id="4Hn-WS-ta8"/>
+                            <constraint firstItem="akx-8w-Mew" firstAttribute="leading" secondItem="xEH-nL-HuH" secondAttribute="leading" constant="10" id="4Hn-WS-ta8"/>
                             <constraint firstItem="akx-8w-Mew" firstAttribute="top" secondItem="SEE-c1-jMk" secondAttribute="bottom" constant="60" id="DWN-4t-urd"/>
                             <constraint firstItem="LwF-aU-z9y" firstAttribute="width" secondItem="xEH-nL-HuH" secondAttribute="width" multiplier="0.5" id="GJp-KG-Tj5"/>
                             <constraint firstItem="LwF-aU-z9y" firstAttribute="leading" secondItem="xEH-nL-HuH" secondAttribute="leading" constant="10" id="NHg-OW-8EB"/>
@@ -1133,14 +1133,14 @@
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pgW-RZ-bsj">
-                                <rect key="frame" x="94" y="50" width="187.5" height="301.5"/>
+                                <rect key="frame" x="19" y="50" width="337.5" height="533"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sjt-Tc-lqS" customClass="GLCalendarView">
-                                        <rect key="frame" x="20" y="20" width="147.5" height="136.5"/>
+                                        <rect key="frame" x="20" y="20" width="297.5" height="368"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Anx-BN-HIo">
-                                        <rect key="frame" x="20" y="236.5" width="147.5" height="45"/>
+                                        <rect key="frame" x="20" y="468" width="297.5" height="45"/>
                                         <color key="backgroundColor" red="0.14901960784313725" green="0.1764705882352941" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="Iya-CO-wAC"/>
@@ -1153,7 +1153,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2f-3t-Eyv">
-                                        <rect key="frame" x="20" y="176.5" width="147.5" height="45"/>
+                                        <rect key="frame" x="20" y="408" width="297.5" height="45"/>
                                         <color key="backgroundColor" red="0.14901960780000001" green="0.1764705882" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="Dkf-rr-brv"/>
@@ -1183,12 +1183,12 @@
                         </subviews>
                         <color key="backgroundColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="pgW-RZ-bsj" firstAttribute="width" secondItem="mGv-eJ-kOJ" secondAttribute="width" multiplier="0.5" id="6Eh-pt-BpX"/>
-                            <constraint firstItem="pgW-RZ-bsj" firstAttribute="height" secondItem="mGv-eJ-kOJ" secondAttribute="height" multiplier="0.5" id="BUB-yk-W0f"/>
+                            <constraint firstItem="pgW-RZ-bsj" firstAttribute="width" secondItem="mGv-eJ-kOJ" secondAttribute="width" multiplier="0.9" id="6Eh-pt-BpX"/>
                             <constraint firstItem="pgW-RZ-bsj" firstAttribute="top" secondItem="MjT-kM-Vmx" secondAttribute="bottom" constant="50" id="EdU-cb-aY9"/>
                             <constraint firstItem="pgW-RZ-bsj" firstAttribute="centerX" secondItem="mGv-eJ-kOJ" secondAttribute="centerX" id="F4z-f1-JjL"/>
                             <constraint firstItem="g8x-dq-otO" firstAttribute="top" secondItem="mGv-eJ-kOJ" secondAttribute="top" id="KkZ-JB-UA8"/>
                             <constraint firstItem="reb-DM-KDw" firstAttribute="top" secondItem="g8x-dq-otO" secondAttribute="bottom" id="XGE-De-Fow"/>
+                            <constraint firstItem="reb-DM-KDw" firstAttribute="top" secondItem="pgW-RZ-bsj" secondAttribute="bottom" constant="20" id="cgd-tH-yBV"/>
                             <constraint firstAttribute="trailing" secondItem="g8x-dq-otO" secondAttribute="trailing" id="s7c-cJ-opC"/>
                             <constraint firstItem="g8x-dq-otO" firstAttribute="leading" secondItem="mGv-eJ-kOJ" secondAttribute="leading" id="tbx-cB-JHX"/>
                         </constraints>
